--- a/casket-web/src/styles.scss
+++ b/casket-web/src/styles.scss
@@ -1,6 +1,57 @@
+/* Define standard variables and values for website */
+$bgcolor: rgb(23, 59, 71);
+$textcolor: rgb(34, 34, 49);
+$fontsize: 18px;
+
 /* You can add global styles to this file, and also import other style files */
-* {
-    font-family: 'Roboto', sans-serif;
+html, body {
+  margin: 0;
+  padding: 0;
+
+  background-color: $bgcolor;
+  color: $textcolor;
+  font-size: $fontsize;
+
+  height: 100%;
+  font-family: Arial, Helvetica, sans-serif;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+/* CAN (MUST) BE REMOVED ! Sample Global style */
+.container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  -webkit-background-size: cover; /* pour anciens Chrome et Safari */
+  background-size: cover; /* version standardisée */
+
+  .title {
+    color: white;
+    margin: 0;
+    padding: 50px 20px;
+  }
+
+  a {
+    color: #fff !important;
+    text-transform: uppercase;
+    text-decoration: none;
+    background: #ed3330;
+    padding: 20px;
+    border-radius: 5px;
+    display: inline-block;
+    border: none;
+    transition: all 0.4s ease 0s;
+
+    &:hover {
+      background: #fff;
+      color: #ed3330 !important;
+      letter-spacing: 1px;
+      -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+      -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+      box-shadow: 5px 40px -10px rgba(0,0,0,0.57);
+      transition: all 0.4s ease 0s;
+    }
+  }
+}
